--- a/workflows/badges.yml
+++ b/workflows/badges.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Update Readme with badges from credly
         uses: pemtajo/badge-readme@2.4.0
         with:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           COMMIT_MESSAGE: "Update badges from credly"
           CREDLY_USER: gurdip-sira
           CREDLY_SORT: POPULAR
