--- a/.github/workflows/badges.yml
+++ b/.github/workflows/badges.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Update Readme with badges from credly
         uses: pemtajo/badge-readme@2.4.0
         with:
+          REPOSITORY: .github
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           COMMIT_MESSAGE: "Update badges from credly"
           CREDLY_USER: gurdip-sira
